<resources>
    <string name="app_name">Copture</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="home_profile_picture">Home Profile Picture</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="officer_name_placeholder">Officer XXXXXXXX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_sign_up">Sign Up SVG</string>
    <string name="badge_number_placeholder">Badge Number</string>
    <string name="badge_number_hint_placeholder">E.g.: 97531</string>
    <string name="login_placeholder">LOGIN</string>
    <string name="password_hint_placeholder">E.g.: xxxxxxxx</string>
    <string name="password_placeholder">Password</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_here">Sign Up Here…</string>
    <string name="dont_have_an_account">Don\'t Have An Account?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="register_placeholder">Register</string>
    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="already_have_an_account">"Already Have An Account? "</string>
    <string name="log_in_here">Log In Here…</string>
    <string name="create_new_ticket">Create New Ticket</string>
    <string name="loading_please_wait">Loading. Please wait…</string>
    <string name="hotline">Hotlines</string>
    <string name="cd_floating_action_button">Floating Action Button</string>
    <string name="get_instant">Get Instant</string>
    <string name="hotline_access">Hotline Access</string>
    <string name="police">Police</string>
    <string name="click_to_expand">Click To Expand</string>
    <string name="cd_police_hotline_access">Police Hotline Access</string>
    <string name="medical">Medical</string>
    <string name="lawyer">Lawyer</string>
    <string name="fire_fighter">Fire Fighter</string>
    <string name="officer_role_placeholder">Officer Role</string>
    <string name="view_your">View Your</string>
    <string name="badge_number">97531</string>
    <string name="badge_placeholder">Badge:</string>
    <string name="station_initials_placeholder">GB-TP</string>
    <string name="station">Station:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="cd_change_password_icon">Change Password Icon</string>
    <string name="cd_edit_profile_icon">Edit Profile Icon</string>
    <string name="cd_back_arrow">Back Arrow</string>
    <string name="copyright">Application Version: 1.0. Daniel Githiomi</string>
    <string name="hotline_placeholder">Riviere du Rempart Police Station</string>
    <string name="scan_placeholder">Scan Driver\'s License</string>
    <string name="cd_new_ticket_item_icon">New Ticket Item Icon</string>
    <string name="create_a_new">Create A New</string>
    <string name="citation_ticket">Citation Ticket</string>
    <string name="submit_ticket">Submit Ticket</string>
    <string name="err_required_fields_data_missing">*Required Fields Data Missing</string>
    <string name="driver_license_scan">Driver\'s License Scan</string>
    <string name="confirm">Confirm</string>
    <string name="drivers_name_placeholder">Driver\'s Name</string>
    <string name="license_number_placeholder">Driver\'s License Number</string>
    <string name="diver_nationality_placeholder">Driver\'s Nationality</string>
    <string name="driver_preliminary_data">Driver Preliminary Data</string>
    <string name="driver_offense">Driver\'s Offense</string>
    <string name="cd_error_icon">warning icon</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="loosing_data">Going back will mean you lose all collected information!</string>
    <string name="cancel">Cancel</string>
    <string name="preview_extracted_data">Preview Extracted Data</string>
    <string name="dob_placeholder">Driver\'s Date Of Birth</string>
</resources>
