<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="?customCardCornerRadius"
    app:cardElevation="?customCardElevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/errorColor_900"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/cd_error_icon"
                android:src="@drawable/ic_warning" />

        </LinearLayout>

        <TextView
            android:id="@+id/TV_AreYouSure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="?attr/boldFont"
            android:padding="10dp"
            android:text="@string/are_you_sure"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?mainTextColor"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/TV_LooseData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="?attr/boldFont"
            android:padding="15dp"
            android:text="@string/loosing_data"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?mainTextColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BTN_Confirm"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/primary_button"
                android:drawableStart="@drawable/ic_check"
                android:drawableTint="@color/black"
                android:fontFamily="?semiBoldFont"
                android:paddingHorizontal="10dp"
                android:text="@string/confirm" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BTN_Cancel"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/primary_button"
                android:backgroundTint="@color/errorColor_900"
                android:drawableStart="@drawable/ic_clear"
                android:drawableTint="@color/white"
                android:fontFamily="?semiBoldFont"
                android:paddingHorizontal="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
