<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".views.fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/RL_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/IB_ArrowLeft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:background="@color/transparent"
            android:src="@drawable/ic_arrow_left"
            android:tooltipText="Back" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LL_PageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RL_toolbar"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/TV_PageSubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="?attr/regularFont"
            android:text="@string/view_your"
            android:textAllCaps="true"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/TV_PageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="?attr/boldFont"
            android:text="@string/profile"
            android:textAllCaps="true"
            android:textSize="27sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/LL_PageTitle"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/IV_profilePicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:contentDescription="@string/home_profile_picture"
                android:src="@drawable/profile_picture"
                app:civ_border_color="?attr/mainBackgroundColor"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/TV_OfficerRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="?attr/regularFont"
                android:text="@string/officer_role_placeholder"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/TV_OfficerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="?attr/boldFont"
                android:text="@string/officer_name_placeholder"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="27sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="?customCardCornerRadius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/RL_toolbar"
                        android:orientation="vertical"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="10dp">

                        <TextView
                            android:id="@+id/TV_Badge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="?attr/regularFont"
                            android:text="@string/badge_placeholder"
                            android:textAlignment="center"
                            android:textAllCaps="true" />

                        <TextView
                            android:id="@+id/TV_BadgeNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="?attr/boldFont"
                            android:text="@string/badge_number"
                            android:textAlignment="center"

                            android:textAllCaps="true"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:background="@color/green" />

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="?customCardCornerRadius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/RL_toolbar"
                        android:orientation="vertical"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="10dp">

                        <TextView
                            android:id="@+id/TV_Station"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="?attr/regularFont"
                            android:text="@string/station"
                            android:textAlignment="center"
                            android:textAllCaps="true" />

                        <TextView
                            android:id="@+id/TV_StationInitials"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="?attr/boldFont"
                            android:text="@string/station_initials_placeholder"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
