<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".views.fragments.CreateFragment">

    <RelativeLayout
        android:id="@+id/RL_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/IB_ArrowLeft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:background="@color/transparent"
            android:contentDescription="@string/cd_back_arrow"
            android:src="@drawable/ic_arrow_left"
            android:tint="?mainTextColor"
            android:tooltipText="Back" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RL_Toolbar"
        android:paddingHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_PageSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="?attr/regularFont"
                android:text="@string/create_a_new"
                android:textAllCaps="true"
                android:textColor="?mainTextColor"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/TV_PageHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="?attr/boldFont"
                android:text="@string/citation_ticket"
                android:textAllCaps="true"
                android:textColor="?mainTextColor"
                android:textSize="27sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/LA_ScanAnimation"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/credentials" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RV_CreateNewTicket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="10dp"
                tools:itemCount="5"
                tools:listitem="@layout/new_ticket_recycler_view_item" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/CB_CreateNewTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:background="@drawable/primary_button"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="5dp"
                android:enabled="false"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/submit_ticket" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
